--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vuepress-theme-plume": "1.0.0-rc.136"
   },
   "dependencies": {
-    "@iconify/json": "^2.2.319"
+    "@iconify/json": "^2.2.319",
+    "@waline/client": "^3.5.6",
+    "axios": "^1.8.4"
   }
 }
